feat: dockerize app
just docker compose up